Add support for problem reports